feat(common, api-server, website): add drifterCardInventory to GameState
- also delete independent types for GameState aka ServerGameState in
website/, use types from common/
